<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group>

        <item
            android:id="@+id/nav_provile"
            android:icon="@drawable/ic_profile"
            android:title="@string/profile"/>

        <item
            android:id="@+id/nav_message"
            android:icon="@drawable/ic_message"
            android:title="@string/message"/>

        <item
            android:id="@+id/nav_friend"
            android:icon="@drawable/ic_people"
            android:title="@string/friend"/>

    </group>

    <item android:title="@string/account_settings">
        <menu>

            <item
                android:id="@+id/nav_update"
                android:icon="@drawable/ic_camera"
                android:title="@string/update_profile"/>

            <item
                android:id="@+id/nav_signout"
                android:icon="@drawable/ic_exit"
                android:title="@string/signout"/>

        </menu>
    </item>

</menu>